deploy/kubernetes/tmeit-se/tmeit-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tmeit-app
  labels:
    app: tmeit-app
spec:
  ipFamilies:
  - IPv6
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: tmeit-app
